feita alteração no front end da pagina de produtos, adicionado opção de alterar pagamento pagaina de comprovante de pedido, alterada registro de cartão, adicionada opção pagamento pendente

--- a/src/app/modal/modal.page.html
+++ b/src/app/modal/modal.page.html
@@ -15,7 +15,7 @@
   </ion-item>
   <ion-item lines="full">
     <ion-item lines="none"><h4><strong>Cliente: </strong>{{nomeCliente}}</h4></ion-item>
-    <ion-item lines="none"  slot="end" >{{tipoPag}}</ion-item>
+    <ion-item lines="none" slot="end" color="{{color}}"(click)="mudarPagamento(cod)">{{tipoPag}}</ion-item>
   </ion-item>
 
   <ion-list>
