--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,8 +1,10 @@
 <ion-header>
   <ion-toolbar color="dark">
-    <ion-title>
-      Pedidos
-    </ion-title>
+
+
+    <ion-title (click)="voltar()"><ion-icon name="arrow-undo-outline">
+
+    </ion-icon><ion-label> Pedidos</ion-label></ion-title>
 
     <!--<ion-item slot="end" color="dark">{{sum | currency:'BRL'}}</ion-item>-->
     <ion-item slot="end" color="dark" (click)="valida()">{{sum | currency:'BRL'}}</ion-item>
@@ -19,10 +21,12 @@
 
     <ion-item color="success" size="large" slot="header"> {{x[0] | date :'fullDate'}}</ion-item>
     <!-- o slice(1) tem a função de pular o primeiro elemento do array X que no caso era vazio-->
-    <ion-item slot="content" *ngFor="let y of x.slice(1)" (click)="abrirModal(y.codPedido, y.valor, y.local, y.preco, y.cliente, y.tipo, y.dataPedido)" >
+    <ion-item slot="content" *ngFor="let y of x.slice(1)" (click)="abrirModal(y.codPedido, y.valor, y.local, y.preco, y.cliente, y.tipo, y.dataPedido)">
       {{y.cliente}}
 
-      <ion-item lines="none" slot="end" >
+      <ion-item lines="none" slot="end" *ngIf="y.tipo==='Pendente'" color="danger">
+        # {{y.codPedido}}
+      </ion-item><ion-item lines="none" slot="end" *ngIf="y.tipo!=='Pendente'">
         # {{y.codPedido}}
       </ion-item>
 
