--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,11 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="dark">
-    <ion-title>
-      Carrinho
-    </ion-title>
+    <ion-title (click)="voltar()"><ion-icon name="arrow-undo-outline">
 
-    <ion-chip slot="end" color="primary">
-      <h3>$ {{soma}}</h3>
+    </ion-icon><ion-label> Carrinho</ion-label></ion-title>
+
+
+    <ion-chip slot="end" color="success">
+      <h3>{{soma | currency:"BRL"}}</h3>
   </ion-chip>
 
   </ion-toolbar>
@@ -50,9 +51,10 @@
     </ion-item>
 
   </ion-list >
-  <ion-button color="success" expand="full" size="large" (click)="pagamento()">FINALIZAR</ion-button>
-  <ion-button color="danger" expand="full" tab="tab1" (click)="verifica()">CANCELAR PEDIDO</ion-button>
+  
 </ion-content>
 
 <ion-footer>
+  <ion-button color="success" expand="full" size="large" (click)="pagamento()">FINALIZAR</ion-button>
+  <ion-button color="danger" expand="full" tab="tab1" (click)="verifica()">CANCELAR PEDIDO</ion-button>
 </ion-footer>
