--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom" color="dark">
+  <!-- <ion-tab-bar slot="bottom" color="dark">
 
     <ion-tab-button tab="tab1">
       <ion-icon [src]="burger"></ion-icon>
@@ -16,5 +16,5 @@
       <ion-label>Carrinho</ion-label>
     </ion-tab-button>
 
-  </ion-tab-bar>
+  </ion-tab-bar> -->
 </ion-tabs>
